--- a/order-online.html
+++ b/order-online.html
@@ -14,7 +14,7 @@
     </h1>
     <table>
         <tr>
-            <td><a href="main.html">About us</a></td>
+            <td><a href="index.html">About us</a></td>
             <td><a href="menu.html">Menu</a></td>
             <td><a href="order-online.html">Order online</a></td>
             <td><a href="directions.html">Directions</a></td>
