--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="nbakery-icon.ico" type="image/x-icon">
-    <title>NBakery: Menu</title>
+    <title>NBakery</title>
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
@@ -14,47 +14,34 @@
     </h1>
     <table>
         <tr>
-            <td><a href="about_us.html">About us</a></td>
+            <td><a href="main.html">About us</a></td>
             <td><a href="menu.html">Menu</a></td>
             <td><a href="order_online.html">Order online</a></td>
             <td><a href="directions.html">Directions</a></td>
         </tr>
     </table>
-    <br>
-    <img class="banner" src="banner.jpg" alt="banner">
-    <section class="menu">
-        <h2>BREAKFAST</h2>
-            <ul>
-                <li>BAGELS</li>
-                <li>CINNAMON BUNNS</li>
-                <li>CROISSANTS</li>
-                <li>MUFFINS</li>  
-            </ul><br>
-        <h2>LUNCH</h2>
-            <ul>
-                <li>HOT SANDWICHES</li>
-                <li>GRILLED PANINI SANDWICHES</li>
-                <li>COLD SANDWICHES</li>
-                <li>VEGETARIAN SANDWICHES</li>
-            </ul><br>
-        <h2>DESSERTS</h2>
-            <ul>
-                <li>COOKIES</li>
-                <li>PASTRY</li>
-                <li>CAKES</li>
-                <li>PIES</li>
-                <li>MACARONS</li>
-            </ul><br>
-        <h2>DRINKS</h2>
-            <ul>
-                <li>HOT CHOCOLATE</li>
-                <li>COCOA</li>
-                <li>TEA</li>
-                <li>COFFEE</li>
-            </ul>
-        <img src="cinnamon-buns.jpg" alt="cinnamon">
+    <blockquote style="text-align:center">"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
+    <img class="mainpagebakery" src="bakery_window.jpg" alt="bakery_window"><br><br>
+        <p>
+            The NBakery is an outcome of true love and infinite inspiration. <br>
+            Our values are quite simple:
+        </p>
+        <ul>
+            <li>quality</li>
+            <li>striving for perfection</li>
+            <li>responsibility</li>
+            <li>professionalism and craftsmanship</li>
+            <li>effectiveness</li>
+            <li>partnership</li>
+        </ul>
+        <p>
+            We are proud to be large enough to cope with any challenges and, at the same time, small enough to save the capability of individual approach to each and every customer.
+            <br><br>
+            We can tell a lot about our history and ideas, but we are convinced that the taste of our baking describes us better that any words.
+        </p>
+        <br><br>
+        <img class="mainpagebakery" src="bakery_hall.jpg" alt="bakery_hall">
         <br><br><br>
-    </section>
     <footer>
         <br>
         <p>
@@ -68,6 +55,6 @@
             +380930010033
         </p>
         <br>
-    </footer>
+    </footer>    
 </body>
 </html>
