--- a/directions.html
+++ b/directions.html
@@ -14,9 +14,9 @@
     </h1>
     <table>
         <tr>
-            <td><a href="main.html">About us</a></td>
+            <td><a href="about_us.html">About us</a></td>
             <td><a href="menu.html">Menu</a></td>
-            <td><a href="order-online.html">Order online</a></td>
+            <td><a href="order_online.html">Order online</a></td>
             <td><a href="directions.html">Directions</a></td>
         </tr>
     </table>
