--- a/about_us.html
+++ b/about_us.html
@@ -14,13 +14,13 @@
     </h1>
     <table>
         <tr>
-            <td><a href="main.html">About us</a></td>
+            <td><a href="about_us.html">About us</a></td>
             <td><a href="menu.html">Menu</a></td>
             <td><a href="order_online.html">Order online</a></td>
             <td><a href="directions.html">Directions</a></td>
         </tr>
     </table>
-    <blockquote style="text-align:center">"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
+    <blockquote>"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
     <img class="mainpagebakery" src="bakery_window.jpg" alt="bakery_window"><br><br>
         <p>
             The NBakery is an outcome of true love and infinite inspiration. <br>
