--- a/menu.html
+++ b/menu.html
@@ -9,20 +9,19 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <h1>
+    <h1 class="headerphoto">
         <img src="nbakery.png" alt="nbakery">
     </h1>
-    <table>
-        <tr>
-            <td><a href="index.html">About us</a></td>
-            <td><a href="menu.html">Menu</a></td>
-            <td><a href="order_online.html">Order online</a></td>
-            <td><a href="directions.html">Directions</a></td>
-        </tr>
-    </table>
+    <nav>
+        <a href="/">About us</a>
+        <a href="menu.html">Menu</a>
+        <a href="order_online.html">Order online</a>
+        <a href="directions.html">Directions</a>
+    </nav>
     <br>
     <img class="banner" src="banner.jpg" alt="banner">
-    <section class="menu">
+    <section class="menulist">
+        <div>
         <h2>BREAKFAST</h2>
             <ul>
                 <li>BAGELS</li>
@@ -52,12 +51,16 @@
                 <li>TEA</li>
                 <li>COFFEE</li>
             </ul>
-        <img src="cinnamon-buns.jpg" alt="cinnamon">
+        </div>
+        <p>
+        <img class="bakeexamples2" src="cinnamon_buns_in_basket.jpg" alt="cinnamon">
+        <img class="bakeexamples" src="cinnamon_buns.jpg" alt="cinnamon">
+        </p>
         <br><br><br>
     </section>
     <footer>
         <br>
-        <p>
+        <p class="linkedfooter">
             <a target=_blank href="https://www.facebook.com/iborko.0"><img src="facebook_icon.png" alt="facebook"></a>
             <a target=_blank href="https://www.instagram.com/borko_0/"><img src="inst_icon.png" alt="instagram"></a>
             <a target=_blank href="mailto:iBorys7@gmail.com"><img src="mail_icon.png" alt="mail"></a>
