--- a/directions.html
+++ b/directions.html
@@ -9,17 +9,15 @@
     <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <h1>
+    <h1 class="headerphoto">
         <img src="nbakery.png" alt="nbakery">
     </h1>
-    <table>
-        <tr>
-            <td><a href="index.html">About us</a></td>
-            <td><a href="menu.html">Menu</a></td>
-            <td><a href="order_online.html">Order online</a></td>
-            <td><a href="directions.html">Directions</a></td>
-        </tr>
-    </table>
+    <nav>
+        <a href="/">About us</a>
+        <a href="menu.html">Menu</a>
+        <a href="order_online.html">Order online</a>
+        <a href="directions.html">Directions</a>
+    </nav>
     <br>
     <img class="banner" src="banner.jpg" alt="banner">
     <br>
@@ -37,7 +35,7 @@
     <br><br><br>
     <footer>
         <br>
-        <p>
+        <p class="linkedfooter">
             <a target=_blank href="https://www.facebook.com/iborko.0"><img src="facebook_icon.png" alt="facebook"></a>
             <a target=_blank href="https://www.instagram.com/borko_0/"><img src="inst_icon.png" alt="instagram"></a>
             <a target=_blank href="mailto:iBorys7@gmail.com"><img src="mail_icon.png" alt="mail"></a>
