--- a/order_online.html
+++ b/order_online.html
@@ -13,7 +13,7 @@
         <img src="nbakery.png" alt="nbakery">
     </h1>
     <nav>
-        <a href="/">About us</a>
+        <a href="index.html">About us</a>
         <a href="menu.html">Menu</a>
         <a href="order_online.html">Order online</a>
         <a href="directions.html">Directions</a>
