--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </h1>
     <nav>
         <a href="/">About us</a>
-        <a href="menu.html">Menu</a>
-        <a href="order_online.html">Order online</a>
-        <a href="directions.html">Directions</a>
+        <a href="/menu.html">Menu</a>
+        <a href="/order_online.html">Order online</a>
+        <a href="/directions.html">Directions</a>
     </nav>
     <blockquote style="text-align:center">"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
     <img class="mainpagebakery" src="bakery_window.jpg" alt="bakery_window"><br><br>
