--- a/directions.html
+++ b/directions.html
@@ -13,10 +13,10 @@
         <img src="nbakery.png" alt="nbakery">
     </h1>
     <nav>
-        <a href="index.html">About us</a>
+        <a href="/index.html">About us</a>
         <a href="menu.html">Menu</a>
-        <a href="order_online.html">Order online</a>
-        <a href="directions.html">Directions</a>
+        <a href="/order_online.html">Order online</a>
+        <a href="/directions.html">Directions</a>
     </nav>
     <br>
     <img class="banner" src="banner.jpg" alt="banner">
