--- a/order_online.html
+++ b/order_online.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="index.html">About us</a>
         <a href="menu.html">Menu</a>
-        <a href="order_online.html">Order online</a>
+        <a href="/">Order online</a>
         <a href="directions.html">Directions</a>
     </nav>
     <br>
