--- a/directions.html
+++ b/directions.html
@@ -16,7 +16,7 @@
         <a href="index.html">About us</a>
         <a href="menu.html">Menu</a>
         <a href="order_online.html">Order online</a>
-        <a href="/">Directions</a>
+        <a href="directions.html">Directions</a>
     </nav>
     <br>
     <img class="banner" src="banner.jpg" alt="banner">
