--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
     </h1>
     <nav>
         <a href="index.html">About us</a>
-        <a href="/">Menu</a>
+        <a href="menu.html">Menu</a>
         <a href="order_online.html">Order online</a>
         <a href="directions.html">Directions</a>
     </nav>
