--- a/menu.html
+++ b/menu.html
@@ -4,47 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="nbakery-icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/nbakery_icon.ico" type="image/x-icon">
     <title>NBakery: Menu</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/css/index-shared.css">
+    <link rel="stylesheet" href="/css/menu.css">
 </head>
 <body>
     <h1 class="headerphoto">
-        <img src="nbakery.png" alt="nbakery">
+         <a href="index.html"><img src="img/nbakery.png" alt="nbakery"></a>
     </h1>
     <nav>
-        <a href="index.html">About us</a>
+        <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="order_online.html">Order online</a>
         <a href="directions.html">Directions</a>
     </nav>
-    <br>
-    <img class="banner" src="banner.jpg" alt="banner">
+    <img class="banner" src="img/banner.jpg" alt="banner">
     <section class="menulist">
         <div>
-        <h2>BREAKFAST</h2>
+            <h2>BREAKFAST</h2>
             <ul>
                 <li>BAGELS</li>
                 <li>CINNAMON BUNNS</li>
                 <li>CROISSANTS</li>
                 <li>MUFFINS</li>  
-            </ul><br>
-        <h2>LUNCH</h2>
+            </ul>
+            <h2>LUNCH</h2>
             <ul>
                 <li>HOT SANDWICHES</li>
                 <li>GRILLED PANINI SANDWICHES</li>
                 <li>COLD SANDWICHES</li>
                 <li>VEGETARIAN SANDWICHES</li>
-            </ul><br>
-        <h2>DESSERTS</h2>
+            </ul>
+            <h2>DESSERTS</h2>
             <ul>
                 <li>COOKIES</li>
                 <li>PASTRY</li>
                 <li>CAKES</li>
                 <li>PIES</li>
                 <li>MACARONS</li>
-            </ul><br>
-        <h2>DRINKS</h2>
+            </ul>
+            <h2>DRINKS</h2>
             <ul>
                 <li>HOT CHOCOLATE</li>
                 <li>COCOA</li>
@@ -53,24 +53,21 @@
             </ul>
         </div>
         <p>
-        <img class="bakeexamples2" src="cinnamon_buns_in_basket.jpg" alt="cinnamon">
-        <img class="bakeexamples" src="cinnamon_buns.jpg" alt="cinnamon">
+            <img class="bakeexample-buns-in-basket" src="/img/cinnamon-buns-in-basket.jpg" alt="cinnamon">
+            <img class="bakeexample-buns" src="/img/cinnamon-buns.jpg" alt="cinnamon">
         </p>
-        <br><br><br>
     </section>
     <footer>
-        <br>
         <p class="linkedfooter">
-            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="facebook_icon.png" alt="facebook"></a>
-            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="inst_icon.png" alt="instagram"></a>
-            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="mail_icon.png" alt="mail"></a>
+            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
+            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="img/inst_icon.png" alt="instagram"></a>
+            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="img/mail_icon.png" alt="mail"></a>
         </p>
         <p class="contacts">
             The NBakery <br>
             Svobody Avenue, 49 <br>
             +380930010033
         </p>
-        <br>
     </footer>
 </body>
 </html>
