--- a/order_online.html
+++ b/order_online.html
@@ -4,74 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="nbakery-icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/nbakery_icon.ico" type="image/x-icon">
     <title>NBakery: Order-online</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/css/index-shared.css">
+    <link rel="stylesheet" href="/css/order-online.css">
 </head>
 <body>
     <h1 class="headerphoto">
-        <img src="nbakery.png" alt="nbakery">
+        <a href="index.html"><img src="img/nbakery.png" alt="nbakery"></a>
     </h1>
     <nav>
-        <a href="index.html">About us</a>
+        <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="order_online.html">Order online</a>
         <a href="directions.html">Directions</a>
     </nav>
-    <br>
+    <img class="banner" src="img/banner.jpg" alt="banner">
     <div class="orderonline">
-    <img class="banner" src="banner.jpg" alt="banner">
-        <p>
-            <img class="icon" src="clock.png" alt="clock">
-            MON.-FRI. 10a.m - 10p.m. <br>
-            SATURDAY 10a.m. - 8p.m. <br>
-            SUNDAY 10a.m. - 6p.m.
-        </p>
-        <p>
-           <img class="icon" src="phone.png" alt="phone">
-           +380930010033
-        </p>
-        <p>
-            <img class="icon" src="shopping-cart.png" alt="shopping-cart">
-            PICKUP - same as opening hours
-        </p>
-        <p>
-            <img class="icon" src="delivery-truck.png" alt="delivery-truck">
-            DELIVERY <br>
-            <b>NO DELIVERY ON SUNDAYS</b>
-        </p>
-        <p>
-            <img class="icon" src="location-icon.png" alt="location-icon">
-            SVOBODY AVENUE, 49
-        </p>
-        <br>
+        <article>
+            <p>
+            <img class="icon" src="img/clock.png" alt="clock">
+                MON.-FRI. 10a.m - 10p.m. <br>
+                SATURDAY 10a.m. - 8p.m. <br>
+                SUNDAY 10a.m. - 6p.m.
+            </p>
+            <p>
+                <img class="icon" src="img/phone.png" alt="phone">
+                +380930010033
+            </p>
+            <p>
+                <img class="icon" src="img/shopping-cart.png" alt="shopping-cart">
+                PICKUP - same as opening hours
+            </p>
+            <p>
+                <img class="icon" src="img/delivery-truck.png" alt="delivery-truck">
+                DELIVERY <br>
+                <b>NO DELIVERY ON SUNDAYS</b>
+            </p>
+            <p>
+                <img class="icon" src="img/location-icon.png" alt="location-icon">
+                SVOBODY AVENUE, 49
+            </p>    
+        </article>    
     </div>
     <form method="POST" action="https://formspree.io/iBorys.w@gmail.com">
-        <input id="name" name="name" type="text" value="YOUR NAME">
-        <br><br>
-        <input id="email" name="email" type="text" value="YOUR EMAIL">            
-        <br><br>
-        <input id="address" name="address" type="text" value="YOUR ADDRESS">
-        <br><br>
-        <input id="tel" name="phone number" type="text" value="YOUR PHONE NUMBER">
-        <br><br>
+        <input id="name" name="name" type="text" placeholder="YOUR NAME"><br>
+        <input id="email" name="email" type="text" placeholder="YOUR EMAIL"><br>            
+        <input id="address" name="address" type="text" placeholder="YOUR ADDRESS"><br>
+        <input id="tel" name="phone number" type="text" placeholder="YOUR PHONE NUMBER"><br>
         <textarea id="opinion" name="opinion" placeholder="DESCRIPTION OF YOUR ORDER" cols="100"></textarea><br>
-        <input type="submit" value="SEND"/>
-        <br><br><br>
+        <input type="submit" value="SEND">
     </form>
     <footer>
-        <br>
         <p class="linkedfooter">
-            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="facebook_icon.png" alt="facebook"></a>
-            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="inst_icon.png" alt="instagram"></a>
-            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="mail_icon.png" alt="mail"></a>
+            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
+            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="img/inst_icon.png" alt="instagram"></a>
+            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="img/mail_icon.png" alt="mail"></a>
         </p>
         <p class="contacts">
             The NBakery <br>
             Svobody Avenue, 49 <br>
             +380930010033
         </p>
-        <br>
     </footer>
 </body>
 </html>
