--- a/directions.html
+++ b/directions.html
@@ -4,48 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="nbakery-icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/nbakery_icon.ico" type="image/x-icon">
     <title>NBakery: Directions</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/css/index-shared.css">
+    <link rel="stylesheet" href="/css/directions.css">
 </head>
 <body>
     <h1 class="headerphoto">
-        <img src="nbakery.png" alt="nbakery">
+        <a href="index.html"><img src="img/nbakery.png" alt="nbakery"></a>
     </h1>
     <nav>
-        <a href="index.html">About us</a>
+        <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="order_online.html">Order online</a>
         <a href="directions.html">Directions</a>
     </nav>
-    <br>
-    <img class="banner" src="banner.jpg" alt="banner">
-    <br>
+    <img class="banner" src="img/banner.jpg" alt="banner">
     <p>
-        <img class="icon" src="location-icon.png" alt="location-icon">
+        <img class="icon" src="img/location-icon.png" alt="location-icon">
         SVOBODY AVENUE, 49
     </p>
-    <br>
     <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.9135550297865!2d24.023170915709525!3d49.84408177939632!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add7303ec015f%3A0x6d70f6ab4c16f0e!2z0L_RgNC-0YHQv9C10LrRgiDQodCy0L7QsdC-0LTQuCwgNDksINCb0YzQstGW0LIsINCb0YzQstGW0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwgNzkwMDA!5e0!3m2!1suk!2sua!4v1537924685082" 
     allowfullscreen></iframe></p>
-    <br>
-    <h1 class="dir">The NBakery</h1>
-    <h2 class="dir">Lviv, Ukraine</h2>
-    <h3 class="dir">Welcome</h3>
-    <br><br><br>
+    <div>
+        <p>The NBakery</p>
+        <p>Lviv, Ukraine</p>
+        <p>Welcome!</p>
+    </div>
     <footer>
-        <br>
         <p class="linkedfooter">
-            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="facebook_icon.png" alt="facebook"></a>
-            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="inst_icon.png" alt="instagram"></a>
-            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="mail_icon.png" alt="mail"></a>
+            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
+            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="img/inst_icon.png" alt="instagram"></a>
+            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="img/mail_icon.png" alt="mail"></a>
         </p>
         <p class="contacts">
             The NBakery <br>
             Svobody Avenue, 49 <br>
             +380930010033
         </p>
-        <br>
     </footer>
 </body>
 </html>
