--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="nbakery-icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/nbakery_icon.ico" type="image/x-icon">
     <title>NBakery</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/css/index-shared.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <h1 class="headerphoto">
-        <img src="nbakery.png" alt="nbakery">
+         <a href="index.html"><img src="img/nbakery.png" alt="nbakery"></a>
     </h1>
     <nav>
-        <a href="index.html">About us</a>
+        <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="order_online.html">Order online</a>
         <a href="directions.html">Directions</a>
     </nav>
-    <blockquote style="text-align:center">"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
-    <img class="mainpagebakery" src="bakery_window.jpg" alt="bakery_window"><br><br>
+    <blockquote>"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
+    <img class="mainpagebakery" src="img/bakery_window.jpg" alt="bakery_window">
+    <div>
         <p>
             The NBakery is an outcome of true love and infinite inspiration. <br>
             Our values are quite simple:
@@ -34,25 +36,22 @@
         </ul>
         <p>
             We are proud to be large enough to cope with any challenges and, at the same time, small enough to save the capability of individual approach to each and every customer.
-            <br><br>
+        <br>
             We can tell a lot about our history and ideas, but we are convinced that the taste of our baking describes us better that any words.
         </p>
-        <br><br>
-        <img class="mainpagebakery" src="bakery_hall.jpg" alt="bakery_hall">
-        <br><br><br>
+    </div>
+        <img class="mainpagebakery" src="img/bakery_hall.jpg" alt="bakery_hall">
     <footer>
-        <br>
         <p class="linkedfooter">
-            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="facebook_icon.png" alt="facebook"></a>
-            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="inst_icon.png" alt="instagram"></a>
-            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="mail_icon.png" alt="mail"></a>
+            <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
+            <a target=_blank href="https://www.instagram.com/borko_0/"><img src="img/inst_icon.png" alt="instagram"></a>
+            <a target=_blank href="mailto:iBorys7@gmail.com"><img src="img/mail_icon.png" alt="mail"></a>
         </p>
         <p class="contacts">
             The NBakery <br>
             Svobody Avenue, 49 <br>
             +380930010033
         </p>
-        <br>
     </footer>
 </body>
 </html>
