--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="/img/nbakery_icon.ico" type="image/x-icon">
     <title>NBakery: Menu</title>
-    <link rel="stylesheet" href="/css/index-shared.css">
+    <link rel="stylesheet" href="/css/index-universal.css">
     <link rel="stylesheet" href="/css/menu.css">
 </head>
 <body>
