--- a/directions.html
+++ b/directions.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="/img/nbakery_icon.ico" type="image/x-icon">
     <title>NBakery: Directions</title>
-    <link rel="stylesheet" href="/css/index-universal.css">
-    <link rel="stylesheet" href="/css/directions.css">
+    <link rel="stylesheet" href="css/index-universal.css">
+    <link rel="stylesheet" href="css/directions.css">
 </head>
 <body>
     <h1 class="headerphoto">
