--- a/menu.html
+++ b/menu.html
@@ -53,8 +53,8 @@
             </ul>
         </div>
         <p>
-            <img class="bakeexample-buns-in-basket" src="/img/cinnamon-buns-in-basket.jpg" alt="cinnamon">
-            <img class="bakeexample-buns" src="/img/cinnamon-buns.jpg" alt="cinnamon">
+            <img class="bakeexample-buns-in-basket" src="img/cinnamon-buns-in-basket.jpg" alt="cinnamon">
+            <img class="bakeexample-buns" src="img/cinnamon-buns.jpg" alt="cinnamon">
         </p>
     </section>
     <footer>
