--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 class="headerphoto">
-         <a href="index.html"><img src="img/nbakery.png" alt="nbakery"></a>
+        <a href="index.html"><img src="img/NBakery-logo.png" alt="nbakery-logo"></a>
     </h1>
     <nav>
         <a href="index.html">Home</a>
@@ -21,7 +21,7 @@
     </nav>
     <img class="banner" src="img/banner.jpg" alt="banner">
     <section class="menulist">
-        <div>
+        <div class="menulist-text">
             <h2>BREAKFAST</h2>
             <ul>
                 <li>BAGELS</li>
@@ -52,16 +52,25 @@
                 <li>COFFEE</li>
             </ul>
         </div>
-        <p>
-            <img class="bakeexample-buns-in-basket" src="img/cinnamon-buns-in-basket.jpg" alt="cinnamon">
-            <img class="bakeexample-buns" src="img/cinnamon-buns.jpg" alt="cinnamon">
-        </p>
+        <div class="menulist-photos">
+            <p>
+                <img class="bakeexample-buns-in-basket" src="img/cinnamon-buns-in-basket.jpg" alt="cinnamon">
+                <img class="bakeexample-croissant" src="img/croissant.jpg" alt="croissant">
+                <img class="bakeexample-donut" src="img/donut.jpg" alt="donut">
+                <img class="bakeexample-macaron" src="img/macaron.jpg" alt="macaron">
+                <img class="bakeexample-cupcakes" src="img/cupcakes.jpg" alt="cupcakes">
+                <img class="bakeexample-pie" src="img/pie.jpg" alt="pie">
+            </p>
+        </div>
     </section>
     <footer>
         <p class="linkedfooter">
             <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
             <a target=_blank href="https://www.instagram.com/borko_0/"><img src="img/inst_icon.png" alt="instagram"></a>
             <a target=_blank href="mailto:iBorys7@gmail.com"><img src="img/mail_icon.png" alt="mail"></a>
+        </p>
+        <p class="nickname">
+            by Borko_0
         </p>
         <p class="contacts">
             The NBakery <br>
