--- a/order_online.html
+++ b/order_online.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 class="headerphoto">
-        <a href="index.html"><img src="img/nbakery.png" alt="nbakery"></a>
+        <a href="index.html"><img src="img/NBakery-logo.png" alt="nbakery-logo"></a>
     </h1>
     <nav>
         <a href="index.html">Home</a>
@@ -20,47 +20,50 @@
         <a href="directions.html">Directions</a>
     </nav>
     <img class="banner" src="img/banner.jpg" alt="banner">
-    <div class="orderonline">
-        <article>
-            <p>
+    <article>
+        <p class="chosen">
             <img class="icon" src="img/clock.png" alt="clock">
-                MON.-FRI. 10a.m - 10p.m. <br>
-                SATURDAY 10a.m. - 8p.m. <br>
-                SUNDAY 10a.m. - 6p.m.
-            </p>
-            <p>
-                <img class="icon" src="img/phone.png" alt="phone">
-                +380930010033
-            </p>
-            <p>
-                <img class="icon" src="img/shopping-cart.png" alt="shopping-cart">
-                PICKUP - same as opening hours
-            </p>
-            <p>
-                <img class="icon" src="img/delivery-truck.png" alt="delivery-truck">
-                DELIVERY <br>
-                <b>NO DELIVERY ON SUNDAYS</b>
-            </p>
-            <p>
-                <img class="icon" src="img/location-icon.png" alt="location-icon">
-                SVOBODY AVENUE, 49
-            </p>    
-        </article>    
-    </div>
+            MON.-FRI. 10a.m - 10p.m. <br>
+            SATURDAY 10a.m. - 8p.m. <br>
+            SUNDAY 10a.m. - 6p.m.
+        </p>
+        <p>
+            <img class="icon" src="img/phone.png" alt="phone">
+            +380930010033
+        </p>
+        <p>
+            <img class="icon" src="img/shopping-cart.png" alt="shopping-cart">
+            PICKUP - same as opening hours
+        </p>
+        <p>
+            <img class="icon" src="img/delivery-truck.png" alt="delivery-truck">
+            DELIVERY <br>
+            <b>NO DELIVERY ON SUNDAYS</b>
+        </p>
+        <p>
+            <img class="icon" src="img/location-icon.png" alt="location-icon">
+            SVOBODY AVENUE, 49
+        </p>    
+    </article>
+    <div class="order-online-form">
     <form method="POST" action="https://formspree.io/iBorys.w@gmail.com">
-        <input id="name" name="name" type="text" placeholder="YOUR NAME"><br>
-        <input id="email" name="email" type="text" placeholder="YOUR EMAIL"><br>            
-        <input id="address" name="address" type="text" placeholder="YOUR ADDRESS"><br>
-        <input id="tel" name="phone number" type="text" placeholder="YOUR PHONE NUMBER"><br>
-        <textarea id="opinion" name="opinion" placeholder="DESCRIPTION OF YOUR ORDER" cols="100"></textarea><br>
-        <input type="submit" value="SEND">
+        <input name="name" type="text" placeholder="YOUR NAME"><br>
+        <input name="email" type="text" placeholder="YOUR EMAIL"><br>            
+        <input name="address" type="text" placeholder="YOUR ADDRESS"><br>
+        <input name="phone number" type="text" placeholder="YOUR PHONE NUMBER"><br>
+        <textarea class="description-of-the-order" name="opinion" placeholder="DESCRIPTION OF YOUR ORDER" cols="100"></textarea><br>
+        <input class="button" type="submit" value="SEND">
     </form>
+    </div>
     <footer>
         <p class="linkedfooter">
             <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
             <a target=_blank href="https://www.instagram.com/borko_0/"><img src="img/inst_icon.png" alt="instagram"></a>
             <a target=_blank href="mailto:iBorys7@gmail.com"><img src="img/mail_icon.png" alt="mail"></a>
         </p>
+        <p class="nickname">
+            by Borko_0
+        </p>        
         <p class="contacts">
             The NBakery <br>
             Svobody Avenue, 49 <br>
