--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 class="headerphoto">
-         <a href="index.html"><img src="img/nbakery.png" alt="nbakery"></a>
+        <a href="index.html"><img src="img/NBakery-logo.png" alt="nbakery-logo"></a>
     </h1>
     <nav>
         <a href="index.html">Home</a>
@@ -46,6 +46,9 @@
             <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
             <a target=_blank href="https://www.instagram.com/borko_0/"><img src="img/inst_icon.png" alt="instagram"></a>
             <a target=_blank href="mailto:iBorys7@gmail.com"><img src="img/mail_icon.png" alt="mail"></a>
+        </p>
+        <p class="nickname">
+            by Borko_0
         </p>
         <p class="contacts">
             The NBakery <br>
