--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <a href="directions.html">Directions</a>
     </nav>
     <blockquote>"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
-    <img class="mainpagebakery" src="img/bakery_window.jpg" alt="bakery_window">
+    <div class="paralax_bakery_window"></div>
     <div>
+        <p>In these days of mass production, it is rare to find a bakery that devotes itself to quality over quantity.</p>
         <p>
             The NBakery is an outcome of true love and infinite inspiration. <br>
             Our values are quite simple:
@@ -40,7 +41,13 @@
             We can tell a lot about our history and ideas, but we are convinced that the taste of our baking describes us better that any words.
         </p>
     </div>
-        <img class="mainpagebakery" src="img/bakery_hall.jpg" alt="bakery_hall">
+    <div class="paralax_bakery_hall"></div>
+    <div>
+        <p>Our vision is to create upscale, quick-serve bakery with a focus on simple and satisfying desserts and baked goods. 
+            We offer simple and delicious desserts that are easily accessible to clients via location or delivery options. 
+            Our ingredients are high quality; each dessert is carefully made with only the finest, all-natural ingredients.</p>
+        <br>
+    </div>
     <footer>
         <p class="linkedfooter">
             <a target=_blank href="https://www.facebook.com/iborko.0"><img src="img/facebook_icon.png" alt="facebook"></a>
