--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
             <h2>BREAKFAST</h2>
             <ul>
                 <li>BAGELS</li>
-                <li>CINNAMON BUNNS</li>
+                <li>CINNAMON BUNS</li>
                 <li>CROISSANTS</li>
                 <li>MUFFINS</li>  
             </ul>
