--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="order_online.html">Order online</a>
         <a href="directions.html">Directions</a>
     </nav>
-    <blockquote>"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</blockquote>
+    <blockquote><i>"BY CHOOSING US, YOU CHOOSE AN EXCEPTIONAL QUALITY"</i></blockquote>
     <div class="paralax_bakery_window"></div>
     <div>
         <p>In these days of mass production, it is rare to find a bakery that devotes itself to quality over quantity.</p>
