--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
     <img class="banner" src="img/banner.jpg" alt="banner">
     <section class="menulist">
         <div class="menulist-text">
-            <h2>BREAKFAST</h2>
+            <h2 class="breakfast">BREAKFAST</h2>
             <ul>
                 <li>BAGELS</li>
                 <li>CINNAMON BUNS</li>
