--- a/order_online.html
+++ b/order_online.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="img/nbakery_icon.ico" type="image/x-icon">
     <title>NBakery: Order-online</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index-universal.css">
     <link rel="stylesheet" href="css/order-online.css">
 </head>
@@ -20,6 +21,9 @@
         <a href="directions.html">Directions</a>
     </nav>
     <img class="banner" src="img/banner.jpg" alt="banner">
+    <div class="gridwithpromobutton">
+        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#promoModal" id="promoButton">Promo</a>
+    </div>
     <article>
         <p class="chosen">
             <img class="icon" src="img/clock.png" alt="clock">
@@ -70,5 +74,40 @@
             +380930010033
         </p>
     </footer>
+
+    <div class="modal fade" id="promoModal" tabindex="-1" role="dialog" aria-labelledby="promo" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="promo">Promo</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+                <p>If you have not decided yet what would you like, push the button below:</p>
+                <button id="product" class="btn btn-secondary">
+                    Hope You Like It
+                </button><br>
+                <input id="display_product" type="text">
+                <br><br>
+                <p>Show your discount to cashier and pay less:</p>
+                <button id="discount" class="btn btn-secondary">
+                    Press for Discount
+                </button><br>
+                <input id="display_discount" type="text">
+          </div>
+          <div class="modal-footer">
+            <button id="closeButton" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="js/order_online.js"></script>
 </body>
 </html>
